feat(sdlc): v4.6 — stack knowledge integration (java-25-knowledge + spring-boot-4)
- Thêm skill mới java-25-knowledge 1.0.0: self-contained reference cho JDK 25 LTS
  (released 2025-09-16) — giải quyết knowledge cutoff trước 2025. Feature status table
  (finalized vs preview, --enable-preview rule), ScopedValue, virtual threads,
  structured concurrency, GC/AOT, security APIs. 7 reference files.
- sdlc-implementation-rules.md §5: Load Knowledge Skills Before Writing (Java Stack) —
  code-writing agents (cook/TDD/quick) PHẢI đọc java-25-knowledge + spring-boot-4 trước
  khi viết Java. EXTREMELY-IMPORTANT block.
- 4 TDD backend agents (be-red/green/refactor/gate): tech-stack table load
  java-25-knowledge cho mọi stack Java/Kotlin, kể cả Spring Boot 4 (bổ trợ, không loại trừ).
- sdlc-versions-comparison.md: thêm v4.6 section + cập nhật 2 bảng chọn.

Co-Authored-By: Claude <noreply@anthropic.com>